--- a/server/insert2DB/templates/index.html
+++ b/server/insert2DB/templates/index.html
@@ -18,4 +18,9 @@
   <script type="text/javascript" src="{% static 'vendor-es5.js' %}"></script>
   <script type="text/javascript" src="{% static 'runtime-es5.js' %}"></script>
   <script type="text/javascript" src="{% static 'main-es5.js' %}"></script></body>
+  <script type="text/javascript" src="{% static 'polyfills-es2015.js' %}"></script>
+  <script type="text/javascript" src="{% static 'styles-es2015.js' %}"></script>
+  <script type="text/javascript" src="{% static 'vendor-es2015.js' %}"></script>
+  <script type="text/javascript" src="{% static 'runtime-es2015.js' %}"></script>
+  <script type="text/javascript" src="{% static 'main-es2015.js' %}"></script></body>
 </html>
