--- a/server/insert2DB/templates/index.html
+++ b/server/insert2DB/templates/index.html
@@ -12,15 +12,16 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script type="text/javascript" src="{% static 'es2015-polyfills.js' %}"></script>
   <script type="text/javascript" src="{% static 'polyfills-es5.js' %}"></script>
-  <script type="text/javascript" src="{% static 'styles-es5.js' %}"></script>
-  <script type="text/javascript" src="{% static 'vendor-es5.js' %}"></script>
-  <script type="text/javascript" src="{% static 'runtime-es5.js' %}"></script>
-  <script type="text/javascript" src="{% static 'main-es5.js' %}"></script></body>
-  <script type="text/javascript" src="{% static 'polyfills-es2015.js' %}"></script>
-  <script type="text/javascript" src="{% static 'styles-es2015.js' %}"></script>
-  <script type="text/javascript" src="{% static 'vendor-es2015.js' %}"></script>
-  <script type="text/javascript" src="{% static 'runtime-es2015.js' %}"></script>
-  <script type="text/javascript" src="{% static 'main-es2015.js' %}"></script></body>
+  <script type="text/javascript" src="{% static 'styles.js-es5' %}"></script>
+  <script type="text/javascript" src="{% static 'vendor.js-es5' %}"></script>
+  <script type="text/javascript" src="{% static 'runtime.js-es5' %}"></script>
+  <script type="text/javascript" src="{% static 'main.js-es5' %}"></script>
+<script type="text/javascript" src="{% static 'polyfills-es2015.js' %}"></script>
+  <script type="text/javascript" src="{% static 'styles.js-es2015' %}"></script>
+  <script type="text/javascript" src="{% static 'vendor.js-es2015' %}"></script>
+  <script type="text/javascript" src="{% static 'runtime.js-es2015' %}"></script>
+  <script type="text/javascript" src="{% static 'main.js-es2015' %}"></script>
+
+</body>
 </html>
