turns out im a dumbass

--- a/server/insert2DB/templates/index.html
+++ b/server/insert2DB/templates/index.html
@@ -11,7 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app>Loading...</app>
   <script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
   <script type="text/javascript" src="{% static 'styles.js' %}"></script>
   <script type="text/javascript" src="{% static 'vendor.js' %}"></script>
